--- a/Frame/index.html
+++ b/Frame/index.html
@@ -1,8 +1,9 @@
 <html>
     <link rel="stylesheet" href="style.css" >
+    <link rel="icon" type="image/x-icon" href="logo-img.png" style="height: 32px">
 <head>
     <title>
-        Ini Praktikum Yak?
+        Hatsune Miku
     </title>
 </head>
 <body>
@@ -38,24 +39,47 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="Konachan.com%20-%20249143%20sample.jpg" class="d-block w-100" alt="1">
+      <div class="carousel-caption d-none d-md-block">
+          <h5>First slide label</h5>
+          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        </div>
     </div>
     <div class="carousel-item">
       <img src="v7zep7l.jpg" class="d-block w-100" alt="2">
+      <div class="carousel-caption d-none d-md-block">
+          <h5>First slide label</h5>
+          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        </div>
     </div>
     <div class="carousel-item">
       <img src="re_dial___livetune_ft__hatsune_miku__wallpaper__v2_by_nimevolution-d71vhbf.png" class="d-block w-100" alt="3">
+      <div class="carousel-caption d-none d-md-block">
+          <h5>First slide label</h5>
+          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        </div>
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
 </div>
-    
+
+<!-- Container-->
+<div class="container">
+    <div class="row">
+        <div class="col-sm-8">
+            col-sm-8
+        </div>
+        <div class="col-sm-4">
+            col-sm-4
+        </div>
+  </div>
+</div>
 </body>
 </html>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
