--- a/Frame/index.html
+++ b/Frame/index.html
@@ -13,9 +13,9 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <a class="navbar-brand" href="#">Hatsune Miku</a>
+    <a href="#"><img src="pro.png" style="height: 45px"></a>
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="#">Miku</a>
       </li>
       <li class="nav-item">
@@ -30,7 +30,7 @@
 </nav>
 
 <!-- Carousel -->    
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -44,14 +44,14 @@
           <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
         </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item" data-interval="5000">
       <img src="v7zep7l.jpg" class="d-block w-100" alt="2">
       <div class="carousel-caption d-none d-md-block">
           <h5>First slide label</h5>
           <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
         </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item" data-interval="5000">
       <img src="re_dial___livetune_ft__hatsune_miku__wallpaper__v2_by_nimevolution-d71vhbf.png" class="d-block w-100" alt="3">
       <div class="carousel-caption d-none d-md-block">
           <h5>First slide label</h5>
@@ -59,27 +59,22 @@
         </div>
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
 
 <!-- Container-->
-<div class="container">
-    <div class="row">
-        <div class="col-sm-8">
-            col-sm-8
-        </div>
-        <div class="col-sm-4">
-            col-sm-4
-        </div>
+<div class="container" style="margin-top: 15px; padding-top: 15px;">
+  <div class="row">
+    <div class="col-sm-8" style="background-color: #e2e2e2">
+        col-sm-8
+    </div>
+    <div class="col-sm-4">
+        col-sm-4
+    </div>
   </div>
 </div>
+
+    
+    
 </body>
 </html>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
