--- a/Frame/index.html
+++ b/Frame/index.html
@@ -62,10 +62,33 @@
 </div>
 
 <!-- Container-->
-<div class="container" style="margin-top: 15px; padding-top: 15px;">
+<div class="container" style="margin-top: 15px; padding-top: 15px;"  style="background: url('mikumikuu.png') center center;">
   <div class="row">
     <div class="col-sm-8" style="background-color: #e2e2e2">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      <div class="row" style="margin-top: 15px">
+        <div class="col-sm-6">
+          <img src="song/1.jpg" alt="liw" class="img-thumbnail">
+          <h5>Hatsune Miku - Love Is War</h5>
+          <p>By Ryo</p>
+          <img src="song/3.jpg" alt="lt" class="img-thumbnail">
+          <h5>Hatsune Miku - Love Trial</h5>
+          <p>by 40mP</p>
+          <img src="song/5.jpg" alt="un" class="img-thumbnail">
+          <h5>Hatsune Miku - Unravel</h5>
+          <p>by dj-Jo</p>
+        </div>
+        <div class="col-sm-6">
+          <img src="song/2.jpg" alt="rg" class="img-thumbnail">
+          <h5>Hatsune Miku - Rolling Girl</h5>
+          <p>by Wowaka</p>
+          <img src="song/4.jpg" alt="sd" class="img-thumbnail">
+          <h5>Hatsune Miku - Sweet Devil</h5>
+          <p>by Hachioji-P</p>
+          <img src="song/6.jpg" alt="gr" class="img-thumbnail">
+          <h5>Hatsune Miku - Ghost Rule</h5>
+          <p>by DECO*27</p>
+        </div>
+      </div>
     </div>
     <div class="col-sm-4">
         col-sm-4
