--- a/Frame/index.html
+++ b/Frame/index.html
@@ -6,7 +6,7 @@
         Hatsune Miku
     </title>
 </head>
-<body>
+<body style="background-color: #919191">
 <!-- Navigation Bar -->    
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,29 +64,41 @@
 <!-- Container-->
 <div class="container" style="margin-top: 15px; padding-top: 15px;"  style="background: url('mikumikuu.png') center center;">
   <div class="row">
-    <div class="col-sm-8" style="background-color: #e2e2e2">
+    <div class="col-sm-8" style="background-color: #343a40; padding-top: 15px">
+      <h3 style="color: #089ba0">What is Hatsune Miku?</h3>
+        <p></p>
+      <p style="color: white">Hatsune Miku is a Japanese music sensation, a 16 year-old blue-haired girl with a unique voice and prodigious energy.</p>  
+      <p style="color: white">What makes her special is that she is not a human singer, but a virtual persona who uses a computer-generated voice and 3D graphics to perform on stage.</p>
+      <br>
+      <h5 style="color: white">Song List</h5>
       <div class="row" style="margin-top: 15px">
         <div class="col-sm-6">
           <img src="song/1.jpg" alt="liw" class="img-thumbnail">
-          <h5>Hatsune Miku - Love Is War</h5>
-          <p>By Ryo</p>
+          <h5 style="color: white">Hatsune Miku - Love Is War</h5>
+          <p style="color: white">By Ryo</p>
+          <p></p>
           <img src="song/3.jpg" alt="lt" class="img-thumbnail">
-          <h5>Hatsune Miku - Love Trial</h5>
-          <p>by 40mP</p>
+          <h5 style="color: white">Hatsune Miku - Love Trial</h5>
+          <p style="color: white">by 40mP</p>
+          <p></p>
           <img src="song/5.jpg" alt="un" class="img-thumbnail">
-          <h5>Hatsune Miku - Unravel</h5>
-          <p>by dj-Jo</p>
+          <h5 style="color: white">Hatsune Miku - Unravel</h5>
+          <p style="color: white">by dj-Jo</p>
+          <p></p>
         </div>
         <div class="col-sm-6">
           <img src="song/2.jpg" alt="rg" class="img-thumbnail">
-          <h5>Hatsune Miku - Rolling Girl</h5>
-          <p>by Wowaka</p>
+          <h5 style="color: white">Hatsune Miku - Rolling Girl</h5>
+          <p style="color: white">by Wowaka</p>
+          <p></p>
           <img src="song/4.jpg" alt="sd" class="img-thumbnail">
-          <h5>Hatsune Miku - Sweet Devil</h5>
-          <p>by Hachioji-P</p>
+          <h5 style="color: white">Hatsune Miku - Sweet Devil</h5>
+          <p style="color: white">by Hachioji-P</p>
+          <p></p>
           <img src="song/6.jpg" alt="gr" class="img-thumbnail">
-          <h5>Hatsune Miku - Ghost Rule</h5>
-          <p>by DECO*27</p>
+          <h5 style="color: white">Hatsune Miku - Ghost Rule</h5>
+          <p style="color: white">by DECO*27</p>
+          <p></p>
         </div>
       </div>
     </div>
@@ -94,10 +106,7 @@
         col-sm-4
     </div>
   </div>
-</div>
-
-    
-    
+</div>  
 </body>
 </html>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
