--- a/Frame/index.html
+++ b/Frame/index.html
@@ -6,7 +6,7 @@
         Hatsune Miku
     </title>
 </head>
-<body style="background-color: #919191">
+<body style="background: url('Hatsune-miku-1920x1080-hd-wallpaper.png'); background-attachment: fixed">
 <!-- Navigation Bar -->    
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,7 +62,7 @@
 </div>
 
 <!-- Container-->
-<div class="container" style="margin-top: 15px; padding-top: 15px;"  style="background: url('mikumikuu.png') center center;">
+<div class="container" style="margin-top: 15px; padding-top: 15px;">
   <div class="row">
     <div class="col-sm-8" style="background-color: #343a40; padding-top: 15px">
       <h3 style="color: #089ba0">What is Hatsune Miku?</h3>
