--- a/Frame/index.html
+++ b/Frame/index.html
@@ -40,22 +40,22 @@
     <div class="carousel-item active">
       <img src="Konachan.com%20-%20249143%20sample.jpg" class="d-block w-100" alt="1">
       <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          <img src="pro.png" style="height: 45px">
+          <p>" I can see this future is right now, Cause my voice is always going around "</p>
         </div>
     </div>
     <div class="carousel-item" data-interval="5000">
       <img src="v7zep7l.jpg" class="d-block w-100" alt="2">
       <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          <img src="pro.png" style="height: 45px">
+          <p>" I can see this future is right now, Cause my voice is always going around "</p>
         </div>
     </div>
     <div class="carousel-item" data-interval="5000">
       <img src="re_dial___livetune_ft__hatsune_miku__wallpaper__v2_by_nimevolution-d71vhbf.png" class="d-block w-100" alt="3">
       <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          <img src="pro.png" style="height: 45px">
+          <p>" I can see this future is right now, Cause my voice is always going around "</p>
         </div>
     </div>
   </div>
@@ -64,7 +64,7 @@
 <!-- Container-->
 <div class="container" style="margin-top: 15px; padding-top: 15px;">
   <div class="row">
-    <div class="col-sm-8" style="background-color: #343a40; padding-top: 15px">
+    <div class="col-sm-8 border border-info" style="background-color: #343a40; padding-top: 15px">
       <h3 style="color: #089ba0">What is Hatsune Miku?</h3>
         <p></p>
       <p style="color: white">Hatsune Miku is a Japanese music sensation, a 16 year-old blue-haired girl with a unique voice and prodigious energy.</p>  
@@ -103,11 +103,20 @@
       </div>
     </div>
     <div class="col-sm-4">
-        col-sm-4
+      <div style="background-color: white" class="border border-info">
+        <div class="col-sm-8">
+            sajhdlahsd;hL;
+        </div>
+      </div>
     </div>
   </div>
-</div>  
+</div>
 </body>
+<footer>
+  <div style="position: sticky; left: 0; bottom: 0;width: 100%; background-color: #212529; margin-top: 15px; color: white; padding-top: 15px; padding-bottom: 15px; padding-left: 25px;">
+      Build by <a href="https://www.github.com/redrgnl" style="color: #00ffff; text-decoration: none">Re</a>
+  </div>
+</footer>
 </html>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
