--- a/Frame/index.html
+++ b/Frame/index.html
@@ -16,10 +16,10 @@
     <a href="#"><img src="pro.png" style="height: 45px"></a>
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
-        <a class="nav-link" href="#">Miku Expo</a>
+        <a class="nav-link" href="https://mikuexpo.com/">Miku Expo</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Miku</a>
+        <a class="nav-link" href="https://magicalmirai.com">Magical Mirai</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -65,12 +65,17 @@
 <div class="container" style="margin-top: 15px; padding-top: 15px;">
   <div class="row">
     <div class="col-sm-8 border border-info" style="background-color: #343a40; padding-top: 15px">
-      <h3 style="color: #089ba0">What is Hatsune Miku?</h3>
-        <p></p>
-      <p style="color: white">Hatsune Miku is a Japanese music sensation, a 16 year-old blue-haired girl with a unique voice and prodigious energy.</p>  
-      <p style="color: white">What makes her special is that she is not a human singer, but a virtual persona who uses a computer-generated voice and 3D graphics to perform on stage.</p>
-      <br>
-      <h5 style="color: white">Song List</h5>
+      <div class="col-sm-12" style="background-color: #089ba0">
+        <h3 style="color: white; padding: 10px">Popular Songs</h3>
+      </div>
+      <div class="col-sm-12">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/6OmwKZ9r07o" allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="col-sm-12" style="background-color: #089ba0; margin-top: 10px">
+        <h4 style="color: white; padding: 10px">Latest Songs</h4>
+      </div>
       <div class="row" style="margin-top: 15px">
         <div class="col-sm-6">
           <a href="" style="text-decoration: none">
@@ -112,10 +117,26 @@
           <p style="color: white">by DECO*27</p>
           <p></p>
         </div>
+        <div class="col-sm-12" style="background-color: #343a40; margin-top: 10px">
+          <nav aria-label="Page navigation example" >
+            <ul class="pagination justify-content-center">
+              <li class="page-item disabled">
+                <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+              </li>
+              <li class="page-item active"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item">
+                <a class="page-link" href="#">Next</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
       </div>
     </div>
     <div class="col-sm-4">
-      <div style="background-color: #343a40; padding: 5px; color: white" class="border border-info">
+      <div style="background-color: #089ba0; padding: 5px; color: white" class="border border-info">
         <div class="col-sm-8">
           <h7>ABOUT ME</h7>
         </div>
@@ -132,7 +153,7 @@
           </div>
         </div>
         <div class="col-sm-12" style="margin-top: 10px">
-          <div style="background-color: #343a40; padding: 10px; color: white" class="border border-info">
+          <div style="background-color: #089ba0; padding: 10px; color: white" class="border border-info">
              
           </div>
         </div>
