--- a/Frame/index.html
+++ b/Frame/index.html
@@ -148,7 +148,10 @@
             </div>
             <h5 class="mt-0">Re</h5>
             <p style="font-size: 12px">Never Trust Anyone Too Much Remember The Devil Was Once an Angel</p>
-            <ion-icon name="logo-github"></ion-icon> <a href="https://www.github.com/redrgnl" style="color: #00ffff; text-decoration: none">     <small>redrgnl</small></a>  
+              <a href="https://www.github.com/redrgnl"><ion-icon name="logo-github" style="font-size: 35px"></ion-icon></a>
+              <a href="https://twitter.com/re_drgnl"><ion-icon name="logo-twitter" style="font-size: 35px"></ion-icon></a>
+              <a href="https://www.youtube.com/channel/UCa_aJIyYds1dL6MKe3VZlNg"><ion-icon name="logo-youtube" style="font-size: 35px"></ion-icon></a>
+              <a href="https://wa.me/6282232567731"><ion-icon name="logo-whatsapp" style="font-size: 35px"></ion-icon></a>
           </div>
         </div>
         <div class="col-sm-12" style="margin-top: 10px">
@@ -230,7 +233,7 @@
                 </div>
               </li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block" style="background-color: #089ba0; color: white">Block level button</button>
+            <button type="button" class="btn btn-lg btn-block" style="background-color: #089ba0; color: white">View More</button>
           </div>
         </div>
       </div>
